8272563: Possible assertion failure in CardTableBarrierSetC1